# bookrecsys-fastapi

./: .gitignore  README.md  backend.py  frontend.py  predict.py  pyproject.toml
