[tool.poetry]
name = "fastapi-bookrecsys"
version = "0.1.0"
description = "book recommendation system using fastapi"
authors = ["khj <bbb6254177@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_bookrecsys"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
streamlit = "^1.24.0"
requests = "^2.31.0"
catboost = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
